<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:elevation="3dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:id="@+id/icon"
            android:src="@drawable/ic_noteadd_small"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_modal_title"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/icon"
            android:textColor="@color/colorWhite"
            android:text="@string/sAdd"/>
    </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical" >



            <TextView
                android:layout_width="match_parent"
                android:textSize="@dimen/text_size_modal_description"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/lblEmployeeId"
                android:text="@string/sContainerNumber"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtBarcode"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                android:textSize="@dimen/text_size_modal_description"
                android:inputType="number"
                android:layout_marginBottom="5dp"
                />

    <TextView
        android:layout_width="match_parent"
        android:textSize="@dimen/text_size_modal_description"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/sQuantity"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:id="@+id/txtQuantity"
        android:selectAllOnFocus="true"
        android:textSize="@dimen/text_size_modal_description"
        android:maxLines="1"
        android:inputType="number"
        android:layout_marginBottom="5dp"
        />
        <TextView
            android:layout_width="0dp"
            android:id="@+id/lblMaxQuantity"
            android:textSize="@dimen/text_size_modal_description"
            android:maxLines="1"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text=""
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:textSize="@dimen/text_size_modal_description"
            android:layout_weight="7"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/sDesc"
            />
        <CheckBox
            android:layout_weight="1"
            android:id="@+id/cbDesc"
            android:layout_marginTop="3dp"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblComponent"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_modal_description"
        android:selectAllOnFocus="true"
        android:dropDownHeight="230dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        >
        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="5dp"
            android:src="@drawable/ic_cancel"
            android:elevation="2dp"
            android:background="@drawable/ripple_effect_red"
            android:id="@+id/btnClose"/>
        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="5dp"
            android:elevation="2dp"
            android:background="@drawable/ripple_effect_green"
            android:src="@drawable/ic_send"
            android:id="@+id/btnSearch" />

    </LinearLayout>

</LinearLayout>